--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 </head>
 <body>
     <h1>this is a heading</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, illo sunt. Assumenda aliquid, rem exercitationem ea corporis non voluptatum explicabo voluptates tempora sit hic ratione suscipit. Facere earum provident quam!
-    Fugit neque reiciendis delectus quibusdam quidem voluptatem odio. Provident at natus ea amet recusandae vitae ipsum ullam enim harum corporis voluptatum architecto reprehenderit eius tenetur eos, ipsa veritatis minus quas?
-    Reprehenderit labore saepe debitis mollitia esse deleniti, eligendi voluptatum dicta nulla repudiandae, officiis dolore sunt dolorem error. Asperiores, minima maxime, aspernatur consectetur saepe tempora similique eum nulla rem in rerum?
-    Assumenda minima dolore labore aliquid esse impedit maiores? Earum aliquam animi maxime repellat doloribus voluptatem esse! Quod dolorem voluptates, eligendi quasi, corrupti consequuntur minima praesentium illum eius asperiores reprehenderit dolorum.
-    Sed autem, voluptates accusantium rem, veritatis, culpa vitae deserunt aliquam magnam optio ab corporis tempora quas! Vel rerum quibusdam vitae velit, assumenda, numquam magni dolorum illum corrupti nihil qui veritatis.
-    Iusto non voluptate libero harum, voluptas consectetur neque natus ducimus quidem. Suscipit delectus dolorem officia ipsam dolor omnis dignissimos veritatis consequuntur excepturi atque. Animi voluptatum qui consectetur non id deleniti!
-    Iure eum voluptatibus vitae assumenda ducimus cupiditate impedit natus incidunt, reiciendis numquam molestias consequuntur fugiat deserunt animi aliquid veritatis sit ipsa provident, voluptatem illo omnis non libero placeat. Perspiciatis, earum?
-    Minus vel exercitationem eum quisquam, sit vitae delectus doloribus, in, temporibus neque consectetur officia nisi quaerat eligendi minima nostrum. Porro ipsa blanditiis totam at deleniti in laudantium nostrum, neque dolorem?
-    Corporis nesciunt ea obcaecati expedita, eum deleniti, ullam laudantium consequatur temporibus voluptates dolores id iusto sint illo assumenda officiis quasi recusandae doloribus, provident veritatis repudiandae sed itaque dolorum? Commodi, quaerat.
-    Quis nemo in tempore mollitia incidunt, corporis itaque, omnis repudiandae dolores optio voluptas modi voluptatum cum quidem ab repellat, iure rem eos asperiores sit. Iste impedit eaque illum nam corporis.
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque adipisci delectus nam aut a. Voluptate, libero dicta reprehenderit nulla quis, quas doloribus facilis, earum neque nesciunt in est eaque. Accusamus.</p>
+
+
 </body>
 </html>
